Fix user manager window's rounded corners by ensuring its content view is layer backed.

BUG=620049

Review-Url: https://codereview.chromium.org/2582793003
Cr-Commit-Position: refs/heads/master@{#439184}

Former-commit-id: e8e923ba5144dd54cf7967c53682741854e0d7cc